fixing overflow bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -2682,7 +2682,7 @@ select:-webkit-autofill:focus {
   }
   #homeContainer {
     scroll-behavior: smooth;
-    overflow-y: scroll;
+    overflow-y: auto;
     @include boxSize(100%, 100%, null, color_function(myWhite), null);
     overflow-x: hidden;
     position: relative;
